setup design system + header

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $neutral-grey: #717171;
 $neutral-l-grey: #89939e;
 $neutral-grey-blue: #abbed1;
 $neutral-silver: #f5f7fa;
+$neutral-white: #fff;
 
 $shade-1: #43a046;
 $shade-2: #388e3b;
@@ -24,8 +25,5 @@ $actionError: #e53835;
 $actionSuccess: #2e7d31;
 
 //font
-$font-family-base: Inter;
+$font-family-base: "Inter", sans-serif;
 // $font-size
- 
- 
- 
