--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -16,6 +16,28 @@ a {
   justify-content: space-between;
   align-items: center;
 }
+
+.section {
+  margin-top: 4rem;
+  &__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.8rem;
+    margin-bottom: 1.6rem;
+  }
+  &__heading {
+    @include text-style($neutral-black, 3.6rem, normal, 600, 4.4rem);
+    text-align: center;
+    max-width: 54.2rem;
+  }
+  &__sub-heading {
+    @include text-style($neutral-black, 1.6rem, normal, 400, 2.4rem);
+    text-align: center;
+    width: 62.8rem;
+  }
+}
+
 .shadow {
   &--sm {
     @include shadow(2px, 4px, rgba(171, 190, 209, 0.6));
