--- a/scss/style.scss
+++ b/scss/style.scss
@@ -209,7 +209,7 @@ html {
         background: $neutral-silver;
         @include shadow(8px, 16px, rgba(171, 190, 209, 0.4));
         p {
-          width: 28.5rem;
+          width: 27rem;
           text-align: center;
         }
         button {
@@ -222,5 +222,50 @@ html {
         }
       }
     }
+  }
+}
+.footer {
+  margin-top: 16rem;
+  &__top {
+    display: flex;
+    padding: 3.2rem 0rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 3.2rem;
+    p {
+      width: 88.7rem;
+      text-align: center;
+    }
+  }
+  &__content {
+    background: $neutral-black;
+    display: flex;
+    padding: 6.4rem 16.5rem;
+    align-items: flex-start;
+    gap: 12.5rem;
+  }
+  &__content-left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4rem;
+    .footer__copyright-info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.8rem;
+      color: $neutral-grey;
+      p {
+        width: 35rem;
+      }
+    }
+    .footer__social-icon {
+      display: flex;
+      align-items: flex-start;
+      gap: 1.6rem;
+    }
+  }
+  &__content-right{
+    
   }
 }
