--- a/scss/style.css
+++ b/scss/style.css
@@ -486,5 +486,51 @@ html {
   align-items: flex-start;
   gap: 1.6rem;
 }
+.footer__content-right {
+  display: flex;
+  align-items: flex-start;
+  gap: 3rem;
+  color: #fff;
+}
+.footer__content-right .footer__sm-col {
+  width: 16rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2.4rem;
+}
+.footer__content-right .footer__lg-col {
+  width: 25.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2.4rem;
+}
+.footer__heading {
+  color: #fff;
+}
+.footer__nav-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1.2rem;
+}
+.footer__input {
+  padding: 0 1.2rem;
+  width: 25.5rem;
+  height: 4rem;
+  flex-shrink: 0;
+  border-radius: 0.8rem;
+  opacity: 0.4;
+  background: #fff;
+}
+.footer__input input {
+  outline: none;
+  border: none;
+}
+.footer__input img {
+  cursor: pointer;
+  opacity: 1;
+}
 
 /*# sourceMappingURL=style.css.map */
