--- a/scss/style.scss
+++ b/scss/style.scss
@@ -265,7 +265,51 @@ html {
       gap: 1.6rem;
     }
   }
-  &__content-right{
-    
+  &__content-right {
+    display: flex;
+    align-items: flex-start;
+    gap: 3rem;
+    color: $neutral-white;
+    .footer__sm-col {
+      width: 16rem;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 2.4rem;
+    }
+    .footer__lg-col {
+      width: 25.5rem;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 2.4rem;
+    }
+  }
+  &__heading {
+    color: $neutral-white;
+  }
+  &__nav-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1.2rem;
+  }
+  &__input {
+    padding: 0 1.2rem;
+    width: 25.5rem;
+    height: 4rem;
+    flex-shrink: 0;
+    border-radius: 0.8rem;
+    opacity: 0.4;
+
+    background: $neutral-white;
+    input {
+      outline: none;
+      border: none;
+    }
+    img {
+      cursor: pointer;
+      opacity: 1;
+    }
   }
 }
