--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -26,4 +26,12 @@ $actionSuccess: #2e7d31;
 
 //font
 $font-family-base: "Inter", sans-serif;
-// $font-size
+
+//gap
+
+
+
+
+$breakpoint-sm: 576px;
+$breakpoint-md: 768px;
+$breakpoint-xl: 1200px;
