--- a/scss/style.css
+++ b/scss/style.css
@@ -3,18 +3,6 @@ a {
   color: inherit;
 }
 
-.flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.flex-between {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 .section {
   margin-top: 4rem;
   padding: 0 14.4rem;
@@ -258,6 +246,11 @@ html {
 }
 
 .header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0;
   width: 100%;
   padding: 3rem 10.5rem;
   background-color: #f5f7fa;
@@ -265,14 +258,24 @@ html {
 .header__nav ul {
   list-style: none;
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
   gap: 5rem;
 }
 .header__regis {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
   gap: 1.4rem;
 }
 
 .slider {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   gap: 10.4rem;
   padding: 9.6rem 14.4rem;
   background-color: #f5f7fa;
@@ -285,21 +288,29 @@ html {
 }
 
 .content .clients-logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0;
   height: 9.8rem;
 }
 .content .community__card-container {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
   align-items: center;
+  justify-content: space-between;
+  gap: 0;
 }
 .content .community__card {
   display: flex;
-  width: 29.9rem;
-  padding: 2.4rem 3.2rem;
   flex-direction: column;
   align-items: center;
-  text-align: center;
+  justify-content: flex-start;
   gap: 0.8rem;
+  width: 29.9rem;
+  padding: 2.4rem 3.2rem;
+  text-align: center;
   flex-shrink: 0;
   border-radius: 1rem;
   box-shadow: 0px 2px 4px 0px rgba(171, 190, 209, 0.2);
@@ -307,11 +318,16 @@ html {
 .content .community__card-img {
   margin-bottom: 1.6rem;
 }
-.content .community__card-img {
-  margin-bottom: 1.6rem;
-}
 .content__body .section {
   margin-top: 4.8rem;
+}
+.content__body .unlock,
+.content__body .calenders {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0;
 }
 .content__body .unlock__img,
 .content__body .calenders__img {
@@ -330,15 +346,21 @@ html {
   margin-bottom: 3.2rem;
 }
 .content__body .achievements {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0;
   background-color: #f5f7fa;
   padding: 6.4rem 14.4rem;
 }
 .content__body .achievements__text {
   display: flex;
-  width: 54rem;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: flex-start;
   gap: 0.8rem;
+  width: 54rem;
   flex-shrink: 0;
 }
 .content__body .achievements__heading {
@@ -355,11 +377,16 @@ html {
 }
 .content__body .achievements__item {
   display: flex;
+  flex-direction: row;
   align-items: center;
+  justify-content: flex-start;
   gap: 1.6rem;
 }
 .content__body .customers {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
   gap: 7.8rem;
   padding: 3.2rem 14.4rem;
   background-color: #f5f7fa;
@@ -377,8 +404,8 @@ html {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: flex-start;
   gap: 3.2rem;
-  flex: 1 0 0;
 }
 .content__body .customers__comment {
   margin-bottom: 1.6rem;
@@ -391,16 +418,25 @@ html {
   color: #89939e;
 }
 .content__body .customers__text-footer {
-  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   gap: 3.2rem;
+  width: 100%;
 }
 .content__body .customers__icon {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   gap: 4.1rem;
 }
 .content__body .community-updates {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   gap: 1.6rem;
 }
 .content__body .community-updates__content {
@@ -412,6 +448,8 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
+  gap: 1.6rem;
   position: relative;
 }
 .content__body .community-updates__card .community-updates__img img {
@@ -421,13 +459,14 @@ html {
   border-radius: 0.8rem;
 }
 .content__body .community-updates__card-info {
-  position: absolute;
-  bottom: -9.6rem;
   display: flex;
-  padding: 1.6rem;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   gap: 1.6rem;
+  position: absolute;
+  bottom: -9.6rem;
+  padding: 1.6rem;
   border-radius: 0.8rem;
   background: #f5f7fa;
   border-radius: 1rem;
@@ -439,10 +478,11 @@ html {
 }
 .content__body .community-updates__card-info button {
   display: flex;
-  padding: 0.8rem;
-  justify-content: center;
+  flex-direction: row;
   align-items: center;
+  justify-content: center;
   gap: 0.8rem;
+  padding: 0.8rem;
   align-self: stretch;
 }
 
@@ -451,10 +491,11 @@ html {
 }
 .footer__top {
   display: flex;
-  padding: 3.2rem 0rem;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   gap: 3.2rem;
+  padding: 3.2rem 0rem;
   background-color: #f5f7fa;
 }
 .footer__top p {
@@ -462,22 +503,26 @@ html {
   text-align: center;
 }
 .footer__content {
-  background: #263238;
   display: flex;
-  padding: 6.4rem 16.5rem;
+  flex-direction: row;
   align-items: flex-start;
+  justify-content: space-between;
   gap: 12.5rem;
+  background: #263238;
+  padding: 6.4rem 16.5rem;
 }
 .footer__content-left {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: flex-start;
   gap: 4rem;
 }
 .footer__content-left .footer__copyright-info {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   gap: 0.8rem;
   color: #717171;
 }
@@ -486,28 +531,34 @@ html {
 }
 .footer__content-left .footer__social-icon {
   display: flex;
+  flex-direction: row;
   align-items: flex-start;
+  justify-content: flex-start;
   gap: 1.6rem;
 }
 .footer__content-right {
   display: flex;
+  flex-direction: row;
   align-items: flex-start;
+  justify-content: flex-start;
   gap: 3rem;
   color: #fff;
 }
 .footer__content-right .footer__sm-col {
-  width: 16rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: flex-start;
   gap: 2.4rem;
+  width: 16rem;
 }
 .footer__content-right .footer__lg-col {
-  width: 25.5rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: flex-start;
   gap: 2.4rem;
+  width: 25.5rem;
 }
 .footer__heading {
   color: #fff;
@@ -516,9 +567,15 @@ html {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: flex-start;
   gap: 1.2rem;
 }
 .footer__input {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0;
   padding: 0 1.2rem;
   width: 25.5rem;
   height: 4rem;
