--- a/scss/style.css
+++ b/scss/style.css
@@ -271,20 +271,49 @@ html {
   gap: 1.4rem;
 }
 
+.slider-container {
+  position: relative;
+  overflow: hidden;
+  background-color: #f5f7fa;
+}
+
 .slider {
+  display: flex;
+  transition: transform 0.6s ease-in-out;
+  width: 300%;
+}
+.slider__item {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   gap: 10.4rem;
   padding: 9.6rem 14.4rem;
-  background-color: #f5f7fa;
+  width: 100%;
+  margin: auto;
 }
 .slider__heading span {
   color: #4caf4f;
 }
 .slider__sub-heading {
   margin: 1.6rem 0 3.6rem 0;
+}
+.slider__dot-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.8rem;
+  position: absolute;
+  bottom: 1.6rem;
+  left: 50%;
+}
+.slider__dot-container .dot {
+  opacity: 0.3;
+  cursor: pointer;
+}
+.slider__dot-container .slider__dot--active {
+  opacity: 1;
 }
 
 .content .clients-logo {
