--- a/scss/abstracts/_mixin.scss
+++ b/scss/abstracts/_mixin.scss
@@ -1,3 +1,5 @@
+@use "variables" as *;
+
 @mixin flexbox($align: center, $justify: flex-start, $direction: row, $gap: 0) {
   display: flex;
   flex-direction: $direction;
@@ -30,4 +32,30 @@
 @mixin shadow($v-offset, $blur, $color) {
   border-radius: 1rem;
   box-shadow: 0px $v-offset $blur 0px $color;
+}
+
+//responsive
+
+@mixin sm {
+  @media (max-width: $breakpoint-sm) {
+    @content;
+  }
+}
+
+@mixin md {
+  @media (max-width: $breakpoint-md) {
+    @content;
+  }
+}
+
+@mixin lg {
+  @media (max-width: $breakpoint-lg) {
+    @content;
+  }
+}
+
+@mixin xl {
+  @media (max-width: $breakpoint-xl) {
+    @content;
+  }
 }
