--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -34,4 +34,5 @@ $font-family-base: "Inter", sans-serif;
 
 $breakpoint-sm: 576px;
 $breakpoint-md: 768px;
+$breakpoint-md: 992px;
 $breakpoint-xl: 1200px;
