--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,14 +22,26 @@ html {
   width: 100%;
   padding: 3rem 10.5rem;
   background-color: $neutral-silver;
+  @include xl {
+    padding: 3rem 6rem;
+  }
   &__nav {
     ul {
       list-style: none;
       @include flexbox($gap: 5rem);
+      @include xl {
+        @include flexbox($gap: 3rem);
+      }
     }
   }
   &__regis {
     @include flexbox($gap: 1.4rem);
+    button {
+      height: 4rem;
+      @include xl {
+        padding: 0.8rem 1.6rem;
+      }
+    }
   }
 }
 
@@ -45,6 +57,9 @@ html {
   &__item {
     @include flexbox($justify: center, $align: center, $gap: 10.4rem);
     padding: 9.6rem 14.4rem;
+    @include xl {
+      padding: 6rem 9rem;
+    }
     width: 100%;
     margin: auto;
   }
@@ -119,9 +134,16 @@ html {
       @include flexbox($justify: space-between);
       background-color: $neutral-silver;
       padding: 6.4rem 14.4rem;
+      @include xl {
+        padding: 4 9rem;
+        @include flexbox($justify: center, $gap: 4rem);
+      }
       &__text {
         @include flexbox(flex-start, flex-start, column, 0.8rem);
         width: 54rem;
+        @include xl {
+          width: 40rem;
+        }
         flex-shrink: 0;
       }
       &__heading {
@@ -145,10 +167,18 @@ html {
       @include flexbox($gap: 7.8rem);
       padding: 3.2rem 14.4rem;
       background-color: $neutral-silver;
+      @include xl {
+        padding: 4 9rem;
+        @include flexbox($justify: center, $align: flex-start, $gap: 4rem);
+      }
       &__img {
         img {
           width: 32.6rem;
           height: 32.6rem;
+          @include xl {
+            width: 20rem;
+            height: 20rem;
+          }
           flex-shrink: 0;
           border-radius: 0.8rem;
           object-fit: cover;
@@ -185,6 +215,10 @@ html {
         width: 100%;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        @include xl {
+          grid-template-columns: 1fr 1fr;
+          gap: 12rem 3rem;
+        }
       }
       &__card {
         @include flexbox($align: center, $direction: column, $gap: 1.6rem);
@@ -236,6 +270,10 @@ html {
     );
     background: $neutral-black;
     padding: 6.4rem 16.5rem;
+    @include xl {
+      padding: 4rem 9rem;
+      gap: 1rem;
+    }
   }
   &__content-left {
     @include flexbox($align: flex-start, $direction: column, $gap: 4rem);
@@ -244,6 +282,9 @@ html {
       color: $neutral-grey;
       p {
         width: 35rem;
+        @include xl {
+          width: 24rem;
+        }
       }
     }
     .footer__social-icon {
@@ -253,6 +294,9 @@ html {
   &__content-right {
     @include flexbox($align: flex-start, $gap: 3rem);
     color: $neutral-white;
+    @include xl {
+      gap: 1.6rem;
+    }
     .footer__sm-col {
       @include flexbox($align: flex-start, $direction: column, $gap: 2.4rem);
       width: 16rem;
